--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,19 @@
-{
+{Add commentMore actions
   "hosting": {
-    "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [{ "source": "**", "destination": "/index.html" }]
-  },
+    "public": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
   "functions": {
-    "source": "functions"
+  "source": "functions"
   }
 }
-
